[add]issue#1_入力したデータをDBに保存し、初期画面に表示させる

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=BookManagementApp
-spring.datasource.url=jdbc:mysql://localhost:3306/mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/book_management_app
 spring.datasource.username=root
 spring.datasource.password=r-miyazaki
 spring.jpa.hibernate.ddl-auto=update
